--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,10 +13,10 @@ build:
 
 smoke test:
   stage: test
-  image: oepnjdk:12-alpine
+  image: openjdk:12-alpine
   before_script:
     - apk --no-cache add curl
   script:
     - java -jar ./build/libs/cars-api.jar & 
-    - sleep 25
+    - sleep 30
     - curl http://localhost:5000/actuator/health | grep "UP"
