--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,4 +35,4 @@ deploy:
     - aws configure set region us-west-2
     - aws s3 cp ./build/libs/$ARTIFACT_NAME s3://$S3_BUCKET/$ARTIFACT_NAME
     - aws elasticbeanstalk create-application-version --application-name $APP_NAME --version-label $CI_PIPELINE_IID --source-bundle S3Bucket=$S3_BUCKET,S3Key=$ARTIFACT_NAME
-    - aws elasticbeanstalk update-enviroment --application-name $APP_NAME --environment-name "producao" --version-label $CI_PIPELINE_IID
+    - aws elasticbeanstalk update-environment --application-name $APP_NAME --environment-name "producao" --version-label $CI_PIPELINE_IID
